Tile Engine - Get Started

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,3 +33,15 @@ add_custom_target(copy_resources ALL COMMAND ${CMAKE_COMMAND}
 	${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$<CONFIGURATION>/res
 )
 add_dependencies(PRACTICAL_2 copy_resources)
+
+#### Practical 3 Tile Engine ####
+file(GLOB_RECURSE SOURCES practical_3/*.cpp practical_3/*.h)
+add_executable(PRACTICAL_3 ${SOURCES})
+target_include_directories(PRACTICAL_3 SYSTEM PRIVATE ${SFML_INCS})
+target_link_libraries(PRACTICAL_3 sfml-graphics)
+add_custom_target(copy_resources_3 ALL COMMAND ${CMAKE_COMMAND}
+	-E copy_directory
+	"${PROJECT_SOURCE_DIR}/res"
+	${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/$<CONFIGURATION>/res
+)
+add_dependencies(PRACTICAL_3 copy_resources_3)
